# FreeRTOS

./: .cSpellWords.txt  .gitmodules  README.md  manifest.yml  mbedtls3_2_1_SNI_fix.patch
.github/: .cSpellWords.txt  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation-issue.md  feature_request.md
.github/scripts/: qemu_reader.c
.github/workflows/: ci.yml  formatting.yml  freertos_demos.yml  freertos_demos_bak.yml  freertos_plus_demos.yml  freertos_qemu_demos.yml
FreeRTOS/: README.md
FreeRTOS-Plus/: README.md
FreeRTOS-Plus/Demo/FreeRTOS_Plus_CLI_with_Trace_Windows_Simulator/: CLI-commands.c  Run-time-stats-utils.c  UDPCommandServer.c  main.c
FreeRTOS-Plus/Demo/FreeRTOS_Plus_Reliance_Edge_and_CLI_Windows_Simulator/: File-Related-CLI-commands.c  File-system-demo.c  Run-time-stats-utils.c  Sample-CLI-commands.c  UDPCommandServer.c  main.c
FreeRTOS-Plus/Demo/FreeRTOS_Plus_TCP_Echo_Posix/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  SimpleTCPEchoServer.c  TCPEchoClient_SingleTasks.c  TCPEchoClient_SingleTasks.h  code_coverage_additions.c  console.c  console.h  main.c  main_networking.c  runtime_stats_hooks.c
FreeRTOS-Plus/Demo/FreeRTOS_Plus_TCP_Echo_Qemu_mps2/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  Readme.md  TCPEchoClient_SingleTasks.c  main.c  main_networking.c  startup.c  syscalls.c
FreeRTOS-Plus/Demo/FreeRTOS_Plus_TCP_Minimal_Windows_Simulator/: ReadMe.txt  main.c  tcp_echo_config.h
FreeRTOS-Plus/Demo/FreeRTOS_Plus_TCP_UDP_Mode_CLI_Windows_Simulator/: Run-time-stats-utils.c  main.c
FreeRTOS-Plus/Demo/FreeRTOS_Plus_WolfSSL_FIPS_Ready_Windows_Simulator/: README_wolfSSL_FIPS_ready.md  SecureTCPClientTask.c  SecureTCPServerTask.c  main.c  user_settings.h
FreeRTOS-Plus/Demo/FreeRTOS_Plus_WolfSSL_Windows_Simulator/: SecureTCPClientTask.c  SecureTCPServerTask.c  main.c  user_settings.h
FreeRTOS-Plus/Demo/corePKCS11_MQTT_Mutual_Auth_Windows_Simulator/: PKCS11_Mqtt_MutualAuthDemo.c  README.md  core_mqtt_config.h  demo_config.h  main.c
FreeRTOS-Plus/Demo/corePKCS11_Windows_Simulator/: .gitignore  CMakeLists.txt  main.c  pkcs11_demo_config.h
FreeRTOS-Plus/Demo/corePKCS11_Windows_Simulator/examples/: demo_helpers.c  demo_helpers.h  management_and_rng.c  mechanisms_and_digests.c  objects.c  pkcs11_demos.h  sign_and_verify.c
FreeRTOS-Plus/Demo/coreSNTP_Windows_Simulator/: SNTPClientTask.c  SampleAppTask.c  common_demo_include.h  core_sntp_config.h  demo_config.h  main.c
FreeRTOS-Plus/Source/FreeRTOS-Plus-CLI/: FreeRTOS_CLI.c  FreeRTOS_CLI.h
FreeRTOS-Plus/Source/FreeRTOS-Plus-Trace/: README.md  trcAssert.c  trcCounter.c  trcDiagnostics.c  trcEntryTable.c  trcError.c  trcEvent.c  trcEventBuffer.c  trcExtension.c  trcHardwarePort.c  trcHeap.c  trcISR.c  trcInternalEventBuffer.c  trcInterval.c  trcKernelPort.c  trcMultiCoreEventBuffer.c  trcObject.c  trcPrint.c  trcSnapshotRecorder.c  trcStackMonitor.c  trcStateMachine.c  trcStaticBuffer.c  trcStreamingRecorder.c  trcString.c  trcTask.c  trcTimestamp.c
FreeRTOS-Plus/Source/Reliance-Edge/: README.md
FreeRTOS-Plus/Test/: README.md
FreeRTOS-Plus/VisualStudio_StaticProjects/FreeRTOS+TCP/: FreeRTOSIPConfig.h  NetworkInterface_WinPCap.c  libslirp-version.h  plus_tcp_hooks_winsim.c
FreeRTOS-Plus/VisualStudio_StaticProjects/FreeRTOS-Kernel/: FreeRTOSConfig.h  freertos_hooks_winsim.c  runtime_stats_winsim.c
FreeRTOS-Plus/VisualStudio_StaticProjects/MbedTLS/: mbedtls_config_v3.2.1.h  mbedtls_config_v3.5.1.h  mbedtls_freertos_port.c  mbedtls_freertos_port.h  threading_alt.h
FreeRTOS-Plus/VisualStudio_StaticProjects/coreHTTP/: core_http_config.h
FreeRTOS-Plus/VisualStudio_StaticProjects/corePKCS11/: corePKCS11.vcxproj  core_pkcs11_config.h
FreeRTOS/Demo/: readme.md
FreeRTOS/Demo/ARM7_AT91FR40008_GCC/: AT91R40008.h  FreeRTOSConfig.h  Makefile  aic.h  ebi.h  main.c  pio.h  tc.h  usart.h
FreeRTOS/Demo/ARM7_AT91SAM7S64_IAR/: FreeRTOSConfig.h  main.c
FreeRTOS/Demo/ARM7_LPC2106_GCC/: FreeRTOSConfig.h  Makefile  lpc210x.h  main.c
FreeRTOS/Demo/ARM7_LPC2129_IAR/: FreeRTOSConfig.h  main.c
FreeRTOS/Demo/ARM7_LPC2129_Keil_RVDS/: FreeRTOSConfig.h  main.c
FreeRTOS/Demo/ARM7_LPC2138_Rowley/: FreeRTOSConfig.h  LPC21xx.h  main.c  mainISR.c
FreeRTOS/Demo/ARM7_STR71x_IAR/: FreeRTOSConfig.h  main.c
FreeRTOS/Demo/ARM7_STR75x_GCC/: FreeRTOSConfig.h  main.c
FreeRTOS/Demo/ARM7_STR75x_IAR/: FreeRTOSConfig.h  main.c
FreeRTOS/Demo/ARM9_AT91SAM9XE_IAR/: FreeRTOSConfig.h  main.c
FreeRTOS/Demo/AVR32_UC3/: FreeRTOSConfig.h  documentation.h  main.c
FreeRTOS/Demo/AVR_ATMega323_IAR/: FreeRTOSConfig.h  main.c  regtest.c
FreeRTOS/Demo/AVR_ATMega323_WinAVR/: FreeRTOSConfig.h  main.c  regtest.c
FreeRTOS/Demo/AVR_ATMega4809_Atmel_Studio/: readme.md
FreeRTOS/Demo/AVR_ATMega4809_IAR/: FreeRTOSConfig.h  clk_config.h  main_blinky.c  main_full.c  main_minimal.c  readme.md  regtest.c
FreeRTOS/Demo/AVR_ATMega4809_MPLAB.X/: readme.md  regtest.c
FreeRTOS/Demo/AVR_ATmega328PB_Xplained_mini_GCC/: readme.md
FreeRTOS/Demo/AVR_Dx_Atmel_Studio/: readme.md
FreeRTOS/Demo/AVR_Dx_IAR/: FreeRTOSConfig.h  RegTest.c  clk_config.h  main.c  main_blinky.c  main_full.c  main_minimal.c  readme.md
FreeRTOS/Test/: README.md
tools/aws_config_quick_start/: README.md  demo_config.templ  demo_config_empty.templ
tools/cmock/: create_test.cmake
(+7644 files in other folders)
